fix(css): add spacing between sidebar on-page headings
Improve readability of the "on this page" heading list by adding
margin and a tighter line height between header items.

Fixes #3085.

--- a/crates/mdbook-html/front-end/css/chrome.css
+++ b/crates/mdbook-html/front-end/css/chrome.css
@@ -643,6 +643,11 @@ html:not(.js) .sidebar-resize-handle {
     padding-left: 0;
 }
 
+.on-this-page li.header-item {
+    margin-block-end: 0.5em;
+    line-height: 1.5em;
+}
+
 /* Horizontal line in chapter list. */
 .spacer {
     width: 100%;
